[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Enemies/slime_crown.png" type="Texture" id=1]
[ext_resource path="res://KingSlime.gd" type="Script" id=2]
[ext_resource path="res://assets/Enemies/slimeBlue.png" type="Texture" id=3]

[node name="KingSlime" type="KinematicBody2D"]
scale = Vector2( 5, 5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 13.8089, -17 )
rotation = 0.610865
scale = Vector2( 0.033, 0.033 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -0.249802, -16.9781, -6.40098, -16.8788, -9.27814, -15.9859, -13.4451, -13.9025, -19.497, -7.75128, -23.5648, -0.0126991, -24.2592, 9.41249, -22.8097, 13.8153, -19.1002, 16.5558, 19.0967, 16.655, 22.7038, 14.1306, 24.0573, 10.0078, 24.4907, 2.46317, 21.1271, -5.73558, 17.6584, -9.72983, 21.9738, -16.0851, 10.4652, -24.5182, 4.81004, -17.0773 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShockLeft" type="Position2D" parent="."]
position = Vector2( -18.7455, 15.9512 )

[node name="ShockRight" type="Position2D" parent="."]
position = Vector2( 10.2802, 15.9512 )
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
